# LRS

./: .gitignore  Accumulate.cpp  Accumulate.h  CMakeLists.txt  Data.cpp  Data.h  Generator.cpp  Generator.h  LoggerCSV.cpp  LoggerCSV.h  README.md  Simulation.cpp  Simulation.h  Statistics.cpp  Statistics.h  experiment_results.csv  graphics.py  input.txt  main  main.cpp
Executables/: DataRange.cpp  RunningPolicies.cpp  ThreadAmount.cpp
